--- a/partials/nav.html
+++ b/partials/nav.html
@@ -113,73 +113,11 @@
 	  <li><a href="/docs/matematika_5.pdf" target="_blank">MAT_5. razred</a></li>
 	  </ul> 
 	  </li>
-  <li><a href="/Covid-19.html">Delo na daljavo</a>
+  <li><a href="/Covid-19.html">SARS-CoV2-informacije</a>
     <ul>
 	  <li><a href="/e_učilnica.html">NOVO OBVESTILO_30.03.2020</a></li>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
-	  <li><a href="/docs/Poseben program za otroke in prost dostop do spletnih vsebin.pdf" target="_blank">RTVSLO-program za mlade-INFO</a></li>
-	  <li><a href="/docs/prirocnik-virus.pdf" target="_blank">Covid-19_PRIROČNIK - Kako se spopasti?</a></li>
-	  <li><a href="/docs/Hitrostna-poštevanka-natisni-in-igraj-4ld52c.pdf" target="_blank">Za krajši čas - IGRA POŠTEVANKA</a></li>
-	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
-	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
-	  <li><a href="/docs/Telesna_aktivnost.pdf" target="_blank">Šport</a></li>
-	  <li><a href="/docs/Pouk na daljavo, zgodovina, geografija, DKE.pdf" target="_blank">Zgodovina_Geografija_DKE</a></li>
-	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
-	  <li>
-		  <a href="/no_content.html" target="_blank">Matematika &#8594</a>
-		  <ul>
-	    <li><a href="/docs/matematika_5.pdf" target="_blank">Matematika_5</a></li>
-            <li><a href="/docs/matematika_6.pdf" target="_blank">Matematika_6</a></li>
-            <li><a href="/docs/matematika_7.pdf" target="_blank">Matematika_7</a></li>
-	    <li><a href="/docs/matematika_8.pdf" target="_blank">Matematika_8</a></li>
-	    <li><a href="/docs/matematika_9_NOVO.pdf" target="_blank">Matematika_9_NOVO 23.3.2020</a></li>
-	    </ul>
-	  </li>
-	  <li>
-		  <a href="/no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda &#8594</a>
-
-	           <ul>
-            <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_5</a></li>
-            <li><a href="/docs/GUM_6_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_6</a></li>
-            <li><a href="/docs/GUM_7_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_7</a></li>
-	    <li><a href="/docs/GUM_8_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_8</a></li>
-	    <li><a href="/docs/GUM_9_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_9</a></li>
-	    </ul>
-	  </li>
-	    <li>
-		  <a href="no_content.html" target="_blank">Kemija &#8594</a>
-	    <ul>
-            <li><a href="/docs/Halogeni_KEM_8.pdf" target="_blank">Kemija_8</a></li>
-            <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Kemija_9</a></li>
-	    </ul>
-	  </li>
-	    <li>
-		  <a href="no_content.html" target="_blank">Fizika &#8594</a>
-	    <ul>
-            <li><a href="/docs/FIZIKA_8_1.del_Fara.pdf" target="_blank">Fizika_8</a></li>
-            <li><a href="/docs/FIZIKA_9_1_del_Fara.pdf" target="_blank">Fizika_9</a></li>
-	    </ul>
-	  </li>
-	  <li>
-		  <a href="no_content.html" target="_blank">Biologija &#8594</a>
-	    <ul>
-            <li><a href="/docs/BIO_8.pdf" target="_blank">Biologija_8</a></li>
-            <li><a href="/docs/Razvrscanje_BIO_9.pdf" target="_blank">Biologija_9</a></li>
-	    </ul>
-	  </li>
-	  <li>
-		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a>
-	    <ul>
-            <li><a href="/docs/Naravoslovje_6.pdf" target="_blank">Naravoslovje_6</a></li>
-            <li><a href="/docs/Naravoslovje_7.pdf" target="_blank">Naravoslovje_7</a></li>
-	    </ul>
-	  </li>
-  </ul>
-  </li>
-	
-	<li><a href="/Covid-19.html">Postopno vračanje učencev k pouku</a>
-  <ul>
 	  <li><a href="/docs/OMEJITVE.pdf" target="_blank">Opredelitev zdravstvenih omejitev za otroke</a></li>
 	 
   </ul> 
