--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,10 +96,9 @@
   
   <li><a href="/Covid-19.html">SARS-CoV2-informacije</a>
     <ul>
-	  <li><a href="/e_učilnica.html">NOVO OBVESTILO_30.03.2020</a></li>
-	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
-	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
-	  <li><a href="/docs/OMEJITVE.pdf" target="_blank">Opredelitev zdravstvenih omejitev za otroke</a></li>
+	  <li><a href="/docs/kljucne_tocke_SARSCOV2.pdf" target= "_blank">Ključne točke protokola na OŠ Fara - model B</a></li>
+	  <li><a href="/docs/nacrt_COVID19.pdf" target= "_blank">Protokol na OŠ Fara</a></li>
+	
 	 
   </ul> 
 </li>
