--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,7 @@
   
   <li><a href="/Covid-19.html">SARS-CoV2-informacije</a>
     <ul>
+	  <li><a href="/docs/obvestilo_starsem.pdf" target= "_blank">Obvestilo staršem pred pričetkom šolskega leta 2020/2021</a></li>
 	  <li><a href="/docs/kljucne_tocke_SARSCOV2.pdf" target= "_blank">Ključne točke protokola na OŠ Fara - model B</a></li>
 	  <li><a href="/docs/nacrt_COVID19.pdf" target= "_blank">Protokol na OŠ Fara</a></li>
 	
