--- a/partials/nav.html
+++ b/partials/nav.html
@@ -95,8 +95,9 @@
   
   <li><a href="/Kontakt.html">Kontakt</a>
   
-  <li><a href="/Covid-19.html">SARS-CoV2-informacije</a>
+  <li><a href="/Covid-19.html">Delo na daljavo 2020_2021</a>
     <ul>
+	  <li><a href="/docs/Obvestilo_16.10.2020.pdf" target= "_blank">Obvestilo_16.10.2020</a></li>
 	  <li><a href="/docs/obvestilo_starsem.pdf" target= "_blank">Obvestilo staršem pred pričetkom šolskega leta 2020/2021</a></li>
 	  <li><a href="/docs/kljucne_tocke_SARSCOV2.pdf" target= "_blank">Ključne točke protokola na OŠ Fara - model B</a></li>
 	  <li><a href="/docs/nacrt_COVID19.pdf" target= "_blank">Protokol na OŠ Fara</a></li>
