--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,8 +96,9 @@
   
   <li><a href="/Kontakt.html">Kontakt</a>
   
-  <li><a href="/Covid-19.html">Delo na daljavo 2020_2021</a>
+  <li><a href="/Covid-19.html">Covid Informacije</a>
     <ul>
+	  <li><a href="/docs/Izvajanje VIZ dejavnosti od 8-3-2021 dalje.pdf" target= "_blank">NOVO - VIZ od 8. 3. 2021</a></li>
 	  <li><a href="/docs/Obvestilo Covid 19.pdf" target= "_blank">Obvestilo_16.10.2020</a></li>
 	  <li><a href="/docs/obvestilo_starsem.pdf" target= "_blank">Obvestilo staršem pred pričetkom šolskega leta 2020/2021</a></li>
 	  <li><a href="/docs/kljucne_tocke_SARSCOV2.pdf" target= "_blank">Ključne točke protokola na OŠ Fara - model B</a></li>
