--- a/partials/nav.html
+++ b/partials/nav.html
@@ -65,7 +65,7 @@
     <ul>
       <li><a href="/docs/Odpiranje_vrtca.pdf" target="_blank">Obvestilo o odpiranju vrtca_februar 2021</a></li>
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
-      <li><a href="/docs/Letni delovni nacrt_18_19.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
+      <li><a href="/docs/LDN-vrtca FARA 2020_21.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2019/2020</a></li>
@@ -75,9 +75,9 @@
   </li>
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
-      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/2018</a></li>
+      <li><a href="/docs/LDN POROČILO 2019_2020.pdf" target="_blank">Realizacija LDN - 2019/2020</a></li>
       <li><a href="/docs/LDN_poročilo_18_19.pdf" target="_blank">Realizacija LDN - 2018/2019</a></li>
-      <li><a href="/docs/LDN_19_20.pdf" target="_blank">LDN za leto 2019/2020</a></li>
+      <li><a href="/docs/LDN OŠ FARA 2020_21.pdf" target="_blank">LDN za leto 2020/2021</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
