--- a/partials/nav.html
+++ b/partials/nav.html
@@ -35,7 +35,8 @@
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2020-2021</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2020-2021</a></li>
-      <li><a href="/docs/jedilnik_sep_okt.pdf" target="_blank">Jedilnik 2020-2021</a></li>
+      <li><a href="/docs/JSO.pdf" target="_blank">Jedilnik 2021-2022</a></li>
+      <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
  
 
 
