--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,7 +24,7 @@
   <li><a href="/no_content.html">Za učence in starše</a>
     <ul>
       <li><a href="/docs/URNIK2021.pdf" target="_blank">Urnik 2020-2021</a></li>
-      <li><a href="/docs/SolskiZvonec_2019_2020.pdf" target="_blank">Šolski zvonec 2020-2021</a></li>
+      <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2020-2021</a></li>
       <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2020-2021</a></li>
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/Predmetnik2019_2020.pdf" target="_blank">Predmetnik 2021-2022</a></li>
