--- a/partials/nav.html
+++ b/partials/nav.html
@@ -25,9 +25,9 @@
     <ul>
       <li><a href="/docs/URNIK2021.pdf" target="_blank">Urnik 2020-2021</a></li>
       <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2021-2022</a></li>
-      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2020-2021</a></li>
+      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2021-2022</a></li>
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
-      <li><a href="/docs/Predmetnik2019_2020.pdf" target="_blank">Predmetnik 2021-2022</a></li>
+      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2021-2022</a></li>
       <li><a href="/docs/SolskiKoledar2019_2020.pdf" target="_blank">Šolski koledar 2021-2022</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2021-2022</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2021-2022</a></li>
