--- a/partials/nav.html
+++ b/partials/nav.html
@@ -28,7 +28,7 @@
       <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2021-2022</a></li>
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2021-2022</a></li>
-      <li><a href="/docs/SolskiKoledar2019_2020.pdf" target="_blank">Šolski koledar 2021-2022</a></li>
+      <li><a href="/docs/ŠK.pdf" target="_blank">Šolski koledar 2021-2022</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2021-2022</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2021-2022</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2021-2022</a></li>
