--- a/partials/nav.html
+++ b/partials/nav.html
@@ -31,7 +31,7 @@
       <li><a href="/docs/ŠK.pdf" target="_blank">Šolski koledar 2021-2022</a></li>
       <li><a href="/docs/IP.pdf" target="_blank">Izbirni predmeti 2021-2022</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2021-2022</a></li>
-      <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2021-2022</a></li>
+      <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2021-2022</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2021-2022</a></li>
       <li><a href="/docs/JSO.pdf" target="_blank">Jedilnik 2021-2022</a></li>
