--- a/partials/nav.html
+++ b/partials/nav.html
@@ -35,6 +35,8 @@
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2021-2022</a></li>
       <li><a href="/docs/JED.pdf" target="_blank">Jedilnik za oktober 2021-2022</a></li>
+      <li><a href="/docs/JFP.pdf" target="_blank">Jedilnik v času počitnic</a></li>
+	    
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
  
 
