--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,7 +34,7 @@
       <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2021-2022</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2021-2022</a></li>
-      <li><a href="/docs/DEC.pdf" target="_blank">Jedilnik za december 2021-2022</a></li>
+      <li><a href="/docs/JM.pdf" target="_blank">Jedilnik MAREC 2022</a></li>
       <li><a href="/docs/JFP.pdf" target="_blank">Jedilnik v času počitnic</a></li>    
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
  
