--- a/partials/nav.html
+++ b/partials/nav.html
@@ -70,7 +70,7 @@
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2019/2020</a></li>
-      <li><a href="/docs/DEC.pdf">Jedilnik za mesec december</a></li>
+      <li><a href="/docs/JM.pdf">Jedilnik za mesec MAREC 2022</a></li>
 
     </ul>
   </li>
