--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,8 +34,7 @@
       <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2021-2022</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2021-2022</a></li>
-      <li><a href="/docs/JM.pdf" target="_blank">Jedilnik MAREC 2022</a></li>
-      <li><a href="/docs/JFP.pdf" target="_blank">Jedilnik v času počitnic</a></li>    
+      <li><a href="/docs/JMK.pdf" target="_blank">Jedilnik MAREC 2022</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
  
 
@@ -70,7 +69,7 @@
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2019/2020</a></li>
-      <li><a href="/docs/JM.pdf">Jedilnik za mesec MAREC 2022</a></li>
+      <li><a href="/docs/JMK.pdf">Jedilnik za mesec MAREC 2022</a></li>
 
     </ul>
   </li>
