--- a/partials/nav.html
+++ b/partials/nav.html
@@ -36,6 +36,9 @@
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2021-2022</a></li>
       <li><a href="/docs/JA.pdf" target="_blank">Jedilnik APRIL 2022</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
+      <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
+      <li><a href="/docs/SPO.pdf" target="_blank">SEZNAM POTREBŠČIN 2022/2023</a></li>
+ 
  
 
 
