--- a/partials/nav.html
+++ b/partials/nav.html
@@ -29,7 +29,7 @@
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2022-2023</a></li>
       <li><a href="/docs/ŠK22_23.pdf" target="_blank">Šolski koledar 2022-2023</a></li>
-      <li><a href="/docs/IP.pdf" target="_blank">Izbirni predmeti 2022-2023</a></li>
+      <li><a href="/docs/OIP2223.pdf" target="_blank">Izbirni predmeti 2022-2023</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2022-2023</a></li>
       <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
