--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,7 +34,7 @@
       <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2022-2023</a></li>
-      <li><a href="/docs/JEDILNIK SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER</a></li>  
+      <li><a href="/docs/JEDILNIK SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2022</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
       <li><a href="/docs/SPO.pdf" target="_blank">SEZNAM POTREBŠČIN 2022/2023</a></li>
