--- a/partials/nav.html
+++ b/partials/nav.html
@@ -31,7 +31,7 @@
       <li><a href="/docs/ŠK22_23.pdf" target="_blank">Šolski koledar 2022-2023</a></li>
       <li><a href="/docs/OIP2223.pdf" target="_blank">Izbirni predmeti 2022-2023</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2022-2023</a></li>
-      <li><a href="/docs/DD.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
+      <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2022-2023</a></li>
       <li><a href="/docs/JEDILNIK SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2022</a></li>  
