--- a/partials/nav.html
+++ b/partials/nav.html
@@ -66,13 +66,11 @@
    </li>
    <li><a href="/no_content.html">Vrtec</a>
     <ul>
-      <li><a href="/docs/Odpiranje_vrtca.pdf" target="_blank">Obvestilo o odpiranju vrtca_februar 2021</a></li>
+ 
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
-      <li><a href="/docs/LDN-vrtca FARA 2020_21.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/no_content.html">Dogodki v vrtcu 2019/2020</a></li>
-      <li><a href="/docs/JA.pdf">Jedilnik za mesec SEPTEMBER 2022</a></li>
+      <li><a href="/docs/JEDILNIK SEPTEMBER.pdf">Jedilnik za mesec SEPTEMBER 2023</a></li>
 
     </ul>
   </li>
