--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,7 +34,7 @@
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PR22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
-      <li><a href="/docs/JEDILNIK SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2022</a></li>  
+      <li><a href="/docs/JEDILNIK_SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2022</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
       <li><a href="/docs/SPO.pdf" target="_blank">SEZNAM POTREBŠČIN 2022/2023</a></li>
@@ -70,7 +70,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JEDILNIK SEPTEMBER.pdf">Jedilnik za mesec SEPTEMBER 2023</a></li>
+      <li><a href="/docs/JEDILNIK_SEPTEMBER.pdf">Jedilnik za mesec SEPTEMBER 2023</a></li>
 
     </ul>
   </li>
