--- a/partials/nav.html
+++ b/partials/nav.html
@@ -15,7 +15,7 @@
         <a href="/no_content.html">Podružnica osilnica &#8594</a>
         <ul>
          
-          <li><a href="/no_content.html">O šoli</a></li>
+          <li><a href="/Osilnica info.html">O šoli</a></li>
         </ul>
       </li>
     </ul>
