--- a/partials/nav.html
+++ b/partials/nav.html
@@ -12,7 +12,7 @@
         </ul>
       </li>
       <li>
-        <a href="/no_content.html">Podružnica osilnica &#8594</a>
+        <a href="/Osilnica info.html">Podružnica osilnica &#8594</a>
         <ul>
          
           <li><a href="/Osilnica info.html">O šoli</a></li>
