--- a/partials/nav.html
+++ b/partials/nav.html
@@ -76,9 +76,8 @@
   </li>
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
-      <li><a href="/docs/LDN POROČILO 2019_2020.pdf" target="_blank">Realizacija LDN - 2019/2020</a></li>
-      <li><a href="/docs/LDN_poročilo_18_19.pdf" target="_blank">Realizacija LDN - 2018/2019</a></li>
-      <li><a href="/docs/LDN OŠ FARA 2020_21.pdf" target="_blank">LDN za leto 2020/2021</a></li>
+      <li><a href="/docs/LDN POROČILO 2019_2020.pdf" target="_blank">Realizacija LDN - 2021/2022</a></li>
+      <li><a href="/docs/.pdf" target="_blank">LDN za leto 2022/2023</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
