--- a/partials/nav.html
+++ b/partials/nav.html
@@ -12,10 +12,10 @@
         </ul>
       </li>
       <li>
-        <a href="/Osilnica info.html">Podružnica osilnica &#8594</a>
+        <a href="/Osilnica_info.html">Podružnica osilnica &#8594</a>
         <ul>
          
-          <li><a href="/Osilnica info.html">O šoli</a></li>
+          <li><a href="/Osilnica_info.html">O šoli</a></li>
         </ul>
       </li>
     </ul>
