--- a/partials/nav.html
+++ b/partials/nav.html
@@ -38,6 +38,7 @@
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
       <li><a href="/docs/SPO.pdf" target="_blank">SEZNAM POTREBŠČIN 2022/2023</a></li>
+      <li><a href="/Logika.html">TEKMOVANJE IZ LOGIKE 2022/2023</a></li>
  
  
 
