--- a/partials/nav.html
+++ b/partials/nav.html
@@ -33,7 +33,7 @@
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2022-2023</a></li>
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
-      <li><a href="/docs/PR22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
+      <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
       <li><a href="/docs/JOKT.pdf" target="_blank">Jedilnik OKTOBER 2022</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
