--- a/partials/nav.html
+++ b/partials/nav.html
@@ -8,7 +8,7 @@
         <a href="/docs/ORGFARA22_23.pdf">Organi šole &#8594</a>
         <ul>
           <li><a href="/docs/SŠV22_23.pdf">Svet šole</a></li>
-          <li><a href="/docs/SvetStarsev.pdf">Svet staršev</a></li>
+          <li><a href="/docs/SVETSTARŠEV22_23.pdf">Svet staršev</a></li>
         </ul>
       </li>
       <li>
