--- a/partials/nav.html
+++ b/partials/nav.html
@@ -21,7 +21,7 @@
     </ul>
   </li>
 	
-  <li><a href="/no_content.html">Za učence in starše</a>
+  <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
       <li><a href="/docs/URNIK_22_23.pdf" target="_blank">Urnik 2022-2023</a></li>
       <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2022-2023</a></li>
