--- a/partials/nav.html
+++ b/partials/nav.html
@@ -65,7 +65,7 @@
 		<li><a href="/images/CANKARJEVA_VRHNIKA_IN_MUZEJ/02.jpg">MUZEJ POŠTE IN TELEKOMUNIKACIJ</a></li>
 	</ul>
    </li>
-   <li><a href="/no_content.html">Vrtec</a>
+   <li><a href="/Kontakt.html">Vrtec</a>
     <ul>
  
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
@@ -75,7 +75,7 @@
 
     </ul>
   </li>
-  <li><a href="/no_content.html">Dokumenti</a>
+  <li><a href="/Kontakt.html">Dokumenti</a>
     <ul>
       <li><a href="/docs/LDN POROČILO 2019_2020.pdf" target="_blank">Realizacija LDN - 2021/2022</a></li>
       <li><a href="/docs/.pdf" target="_blank">LDN za leto 2022/2023</a></li>
