--- a/partials/nav.html
+++ b/partials/nav.html
@@ -83,10 +83,10 @@
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
    
-   <li><a href="/no_content.html">Predmeti - tekoče informacije</a>
+   <li><a href="/predmeti.html">Predmeti - tekoče informacije</a>
     <ul>
-      <li><a href="/no_content.html">Angleški jezik</a></li>
-      <li><a href="/no_content.html">Matematika</a></li>
+      <li><a href="/predmeti.html">Angleški jezik</a></li>
+      <li><a href="/predmeti.html">Matematika</a></li>
 
 
     </ul>
