--- a/partials/nav.html
+++ b/partials/nav.html
@@ -27,14 +27,14 @@
       <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2022-2023</a></li>
       <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2022-2023</a></li>
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
-      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2022-2023</a></li>
+      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2023-2024</a></li>
       <li><a href="/docs/ŠK22_23.pdf" target="_blank">Šolski koledar 2022-2023</a></li>
       <li><a href="/docs/OIP2223.pdf" target="_blank">Izbirni predmeti 2022-2023</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2022-2023</a></li>
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
-      <li><a href="/docs/JOKTOBER.pdf" target="_blank">Jedilnik FEBRUAR 2023</a></li>  
+      <li><a href="/docs/SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2024</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/docs/SDZ.pdf" target="_blank">SEZNAM DELOVNIH 2022/2023</a></li>
       <li><a href="/docs/SPO.pdf" target="_blank">SEZNAM POTREBŠČIN 2022/2023</a></li>
