--- a/partials/nav.html
+++ b/partials/nav.html
@@ -23,12 +23,12 @@
 	
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/URNIK_22_23.pdf" target="_blank">Urnik 2022-2023</a></li>
+      <li><a href="/docs/URNIK_22_23.pdf" target="_blank">Urnik 2023-2024</a></li>
       <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2022-2023</a></li>
-      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2022-2023</a></li>
+      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2023-2024</a></li>
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2023-2024</a></li>
-      <li><a href="/docs/ŠK22_23.pdf" target="_blank">Šolski koledar 2022-2023</a></li>
+      <li><a href="/docs/SOLSKIKOLEDAR2324.pdf" target="_blank">Šolski koledar 2023-2024</a></li>
       <li><a href="/docs/OIP2223.pdf" target="_blank">Izbirni predmeti 2022-2023</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2022-2023</a></li>
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
