--- a/partials/nav.html
+++ b/partials/nav.html
@@ -74,8 +74,9 @@
   </li>
   <li><a href="/Kontakt.html">Dokumenti</a>
     <ul>
-      <li><a href="/docs/LDN POROČILO 2019_2020.pdf" target="_blank">Realizacija LDN - 2021/2022</a></li>
-      <li><a href="/docs/.pdf" target="_blank">LDN za leto 2022/2023</a></li>
+      <li><a href="/docs/LDN_poročilo_22_23.pdf" target="_blank">Realizacija LDN - 2022_2023</a></li>
+      <li><a href="/docs/LDN_23_24.pdf" target="_blank">LDN za leto 2023_2024</a></li>
+      <li><a href="/docs/LDN_vrtec_23_24.pdf" target="_blank">LDN_vrtec - za leto 2023_2024</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
