--- a/partials/nav.html
+++ b/partials/nav.html
@@ -33,7 +33,7 @@
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
-      <li><a href="/docs/SEPTEMBER.pdf" target="_blank">Jedilnik SEPTEMBER 2024</a></li>  
+      <li><a href="/docs/jSEPTEMBER.pdf" target="_blank">Jedilnik OKTOBER 2024</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/Logika.html">TEKMOVANJE IZ LOGIKE 2023/2024</a></li>
  
@@ -68,7 +68,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JOKTOBER.pdf">Jedilnik za mesec FEBRUAR 2023</a></li>
+      <li><a href="/docs/JjOKTOBER.pdf">Jedilnik za mesec OKTOBER 2023</a></li>
 
     </ul>
   </li>
