--- a/partials/nav.html
+++ b/partials/nav.html
@@ -23,17 +23,17 @@
 	
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/UR2324.pdf" target="_blank">Urnik 2023-2024</a></li>
-      <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2023-2024</a></li>
-      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2023-2024</a></li>
-      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2023-2024</a></li>
-      <li><a href="/docs/SOLSKIKOLEDAR2324.pdf" target="_blank">Šolski koledar 2023-2024</a></li>
-      <li><a href="/docs/OIP2324.pdf" target="_blank">Izbirni predmeti 2023-2024</a></li>
+      <li><a href="/docs/UR2324.pdf" target="_blank">Urnik 2024-2025</a></li>
+      <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
+      
+      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
+      <li><a href="/docs/SOLSKIKOLEDAR2324.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
+      <li><a href="/docs/OIP2324.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2023-2024</a></li>
-      <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2022-2023</a></li>
+      <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
-      <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2022-2023</a></li>
-      <li><a href="/docs/jSEPTEMBER.pdf" target="_blank">Jedilnik OKTOBER 2024</a></li>  
+      <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2024-2025</a></li>
+      <li><a href="/docs/jSEPTEMBER.pdf" target="_blank">Jedilnik NOVEMBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/Logika.html">TEKMOVANJE IZ LOGIKE 2023/2024</a></li>
  
@@ -68,15 +68,15 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JjOKTOBER.pdf">Jedilnik za mesec OKTOBER 2023</a></li>
+      <li><a href="/docs/JjOKTOBER.pdf">Jedilnik za mesec NOVEMBER 2025</a></li>
 
     </ul>
   </li>
   <li><a href="/Kontakt.html">Dokumenti</a>
     <ul>
       <li><a href="/docs/LDN_poročilo_22_23.pdf" target="_blank">Realizacija LDN - 2022_2023</a></li>
-      <li><a href="/docs/LDN_23_24.pdf" target="_blank">LDN za leto 2023_2024</a></li>
-      <li><a href="/docs/LDN_vrtec_23_24.pdf" target="_blank">LDN_vrtec - za leto 2023_2024</a></li>
+      <li><a href="/docs/LDN_OŠ FARA 2024-25.pdf" target="_blank">LDN za leto 2024_2025</a></li>
+      <li><a href="/docs/LDN vrtec 24_25.pdf" target="_blank">LDN vrtca za leto 2024_2025</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
