--- a/partials/nav.html
+++ b/partials/nav.html
@@ -23,7 +23,7 @@
 	
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/UR2324.pdf" target="_blank">Urnik 2024-2025</a></li>
+      <li><a href="/docs/URNIK2425.pdf" target="_blank">Urnik 2024-2025</a></li>
       <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
