--- a/partials/nav.html
+++ b/partials/nav.html
@@ -74,7 +74,7 @@
   </li>
   <li><a href="/Kontakt.html">Dokumenti</a>
     <ul>
-      <li><a href="/docs/LDN_poročilo_22_23.pdf" target="_blank">Realizacija LDN - 2022_2023</a></li>
+      <li><a href="/docs/POROČILO LDN_2324.pdf" target="_blank">Poročilo LDN - 2023_2024</a></li>
       <li><a href="/docs/LDN_OŠ FARA 2024-25.pdf" target="_blank">LDN za leto 2024_2025</a></li>
       <li><a href="/docs/LDN vrtec 24_25.pdf" target="_blank">LDN vrtca za leto 2024_2025</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
