--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,7 +24,7 @@
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
       <li><a href="/docs/URNIK2425.pdf" target="_blank">Urnik 2024-2025</a></li>
-      <li><a href="/docs/šz.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
+      <li><a href="/docs/ŠZ2425.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
