--- a/partials/nav.html
+++ b/partials/nav.html
@@ -28,7 +28,7 @@
       
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
-      <li><a href="/docs/OIP2324.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
+      <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2023-2024</a></li>
       <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
