--- a/partials/nav.html
+++ b/partials/nav.html
@@ -30,7 +30,7 @@
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
       <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024-2025</a></li>
-      <li><a href="/docs/DD22_23.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
+      <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2024-2025</a></li>
       <li><a href="/docs/jSEPTEMBER.pdf" target="_blank">Jedilnik NOVEMBER 2025</a></li>  
