--- a/partials/nav.html
+++ b/partials/nav.html
@@ -32,7 +32,7 @@
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024-2025</a></li>
       <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
-      <li><a href="/docs/PROJEKTI22_23.pdf" target="_blank">Projekti 2024-2025</a></li>
+      <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024-2025</a></li>
       <li><a href="/docs/jSEPTEMBER.pdf" target="_blank">Jedilnik NOVEMBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
       <li><a href="/Logika.html">TEKMOVANJE IZ LOGIKE 2023/2024</a></li>
