--- a/partials/nav.html
+++ b/partials/nav.html
@@ -35,8 +35,7 @@
       <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024-2025</a></li>
       <li><a href="/docs/JED_NOV.pdf" target="_blank">Jedilnik NOVEMBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
-      <li><a href="/Logika.html">TEKMOVANJE IZ LOGIKE 2023/2024</a></li>
- 
+  
  
 
 
@@ -68,7 +67,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JjOKTOBER.pdf">Jedilnik za mesec NOVEMBER 2025</a></li>
+      <li><a href="/docs/JED_NOV.pdf">Jedilnik za mesec NOVEMBER 2025</a></li>
 
     </ul>
   </li>
