--- a/partials/nav.html
+++ b/partials/nav.html
@@ -27,6 +27,7 @@
       <li><a href="/docs/ŠZ2425.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
+      <li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">ZAPOSLENI NA OŠ FARA 2024 - 2025</a></li>
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
       <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024-2025</a></li>
