--- a/partials/nav.html
+++ b/partials/nav.html
@@ -26,17 +26,17 @@
       <li><a href="/docs/URNIK2425.pdf" target="_blank">Urnik 2024-2025</a></li>
       <li><a href="/docs/ŠZ2425.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
-      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024-2025</a></li>
-      <li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">ZAPOSLENI NA OŠ FARA 2024 - 2025</a></li>
-      <li><a href="/docs/ŠVN2425.pdf" target="_blank">ŠOLA V NARAVI 2024 - 2025</a></li>
+      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetnik 2024 - 2025</a></li>
+      <li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a></li>
+      <li><a href="/docs/ŠVN2425.pdf" target="_blank">Šola v naravi 2024 - 2025</a></li>
       <li><a href="/docs/GU2425.pdf" target="_blank">Govorilne ure za učence in starše 2024 - 2025</a></li>
-      <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024-2025</a></li>
-      <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024-2025</a></li>
-      <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024-2025</a></li>
-      <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024-2025</a></li>
+      <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024 - 2025</a></li>
+      <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024 - 2025</a></li>
+      <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024 - 2025</a></li>
+      <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024 - 2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
-      <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024-2025</a></li>
-      <li><a href="/docs/JED_NOV.pdf" target="_blank">Jedilnik NOVEMBER 2025</a></li>  
+      <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024 - 2025</a></li>
+      <li><a href="/docs/JED_NOV.pdf" target="_blank">Jedilnik NOVEMBER 2024</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
   
  
