--- a/partials/nav.html
+++ b/partials/nav.html
@@ -38,6 +38,7 @@
       <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024 - 2025</a></li>
       <li><a href="/docs/JD.pdf" target="_blank">Jedilnik DECEMBER 2024</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
+      <li><a href="/docs/RAC.doc" target="_blank">VAJA</a></li>
   
  
 
