--- a/partials/nav.html
+++ b/partials/nav.html
@@ -83,6 +83,7 @@
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
+      <li><a href="/docs/BK.doc" target= "_blank">UREJANJE BESEDIL</a></li>
    
    <li><a href="/predmeti.html">Predmeti - tekoče informacije</a>
     <ul>
