--- a/partials/nav.html
+++ b/partials/nav.html
@@ -81,8 +81,8 @@
       <li><a href="/docs/LDN_OŠ FARA 2024-25.pdf" target="_blank">LDN za leto 2024_2025</a></li>
       <li><a href="/docs/LDN vrtec 24_25.pdf" target="_blank">LDN vrtca za leto 2024_2025</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
-      <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
-      <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
+      <li><a href="/docs/PSRN.pdf" target= "_blank">Pravila šolskega reda</a></li>
+      <li><a href="/docs/VNN.pdf" target= "_blank">Vzgojni načrt</a></li>
       <li><a href="/docs/BK.docx" target= "_blank">UREJANJE BESEDIL</a></li>
    
    <li><a href="/predmeti.html">Predmeti - tekoče informacije</a>
