--- a/partials/nav.html
+++ b/partials/nav.html
@@ -36,7 +36,7 @@
       <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024 - 2025</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024 - 2025</a></li>
-      <li><a href="/docs/JD.pdf" target="_blank">Jedilnik DECEMBER 2024</a></li>  
+      <li><a href="/docs/JD.pdf" target="_blank">JAPRIL2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
      
   
@@ -71,7 +71,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JD.pdf">Jedilnik za mesec DECEMBER 2024</a></li>
+      <li><a href="/docs/JD.pdf">JAPRIL2025</a></li>
 
     </ul>
   </li>
