--- a/partials/nav.html
+++ b/partials/nav.html
@@ -5,7 +5,7 @@
       <li><a href="/Osnovni_podatki.html">Osnovni podatki</a></li>
 
       <li>
-        <a href="/docs/ORGFARA22_23.pdf">Organi šole &#8594</a>
+        <a href="/docs/OŠ2025.pdf">Organi šole &#8594</a>
         <ul>
           <li><a href="/docs/SŠV22_23.pdf">Svet šole</a></li>
           <li><a href="/docs/SVETSTARŠEV22_23.pdf">Svet staršev</a></li>
