--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,7 +34,7 @@
       <li><a href="/docs/IP2425.pdf" target="_blank">Izbirni predmeti 2024 - 2025</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2024 - 2025</a></li>
       <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024 - 2025</a></li>
-      <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
+      <li><a href="/docs/ŠP.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024 - 2025</a></li>
       <li><a href="/docs/JAPRIL.pdf" target="_blank">Jedilnik April 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
