--- a/partials/nav.html
+++ b/partials/nav.html
@@ -27,7 +27,7 @@
       <li><a href="/docs/ŠZ2425.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
       <li><a href="/docs/PREDMETNIK2425.pdf" target="_blank">Predmetnik 2024 - 2025</a></li>
-      <li><a href="/Zaposleni.html" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a></li>
+      <li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a></li>
       <li><a href="/docs/ŠVN2425.pdf" target="_blank">Šola v naravi 2024 - 2025</a></li>
       <li><a href="/docs/GU2425.pdf" target="_blank">Govorilne ure za učence in starše 2024 - 2025</a></li>
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2024 - 2025</a></li>
