--- a/partials/nav.html
+++ b/partials/nav.html
@@ -77,6 +77,7 @@
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PSRN.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VNN.pdf" target= "_blank">Vzgojni načrt</a></li>
+      <li><a href="/docs/POROČILO_SAMOEVALVACIJA.pdf" target= "_blank">Poročilo - samoevalvacija 2023_2024</a></li>
 
    
    <li><a href="/predmeti.html">Predmeti - tekoče informacije</a>
