--- a/partials/nav.html
+++ b/partials/nav.html
@@ -78,6 +78,7 @@
       <li><a href="/docs/PSRN.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VNN.pdf" target= "_blank">Vzgojni načrt</a></li>
       <li><a href="/docs/POROČILO_SAMOEVALVACIJA.pdf" target= "_blank">Poročilo - samoevalvacija 2023_2024</a></li>
+      <li><a href="/docs/POROČILO O SAMOEVALVACIJI 2023_2024.pdf" target= "_blank">Poročilo o samoevalvaciji 2023_2024</a></li>
 
    
    <li><a href="/predmeti.html">Predmeti - tekoče informacije</a>
