--- a/partials/nav.html
+++ b/partials/nav.html
@@ -59,7 +59,7 @@
     </ul>
   </li>
  
-   <li><a href="/Kontakt.html">Vrtec</a>
+   <li><a href="/docs/VRTEC FARA.pdf" target="_blank">Vrtec</a>
     <ul>
  
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
