--- a/partials/nav.html
+++ b/partials/nav.html
@@ -61,9 +61,9 @@
  
    <li><a href="/docs/VRTEC FARA.pdf" target="_blank">Vrtec</a>
     <ul>
-      <li><a href="/docs/BZ.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/LDN2425.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/PS.pdf" target="_blank">Obrazci - vloge</a></li>
+      <li><a href="/docs/BZ.pdf" target="_blank">Bralna značka</a></li>
+      <li><a href="/docs/LDN2425.pdf" target="_blank">Letni delovni načrt Vrtca</a></li>
+      <li><a href="/docs/PS.pdf" target="_blank">Pooblastilo staršem o oddaji otroka drugi osebi</a></li>
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
