--- a/partials/nav.html
+++ b/partials/nav.html
@@ -81,7 +81,7 @@
       <li><a href="/docs/VNN.pdf" target= "_blank">Vzgojni načrt</a></li>
       <li><a href="/docs/POROČILO_SAMOEVALVACIJA.pdf" target= "_blank">Poročilo - samoevalvacija 2023_2024</a></li>
       <li><a href="/docs/POROČILO O SAMOEVALVACIJI 2023_2024.pdf" target= "_blank">Poročilo o samoevalvaciji 2023_2024</a></li>
-		 <li><a href="/docs/POMEMBNE NOVOSTI V NOVEM ŠOLSKEM LETU 2025_2026.pdf" target= "_blank">POMEMBNE NOVOSTI V NOVEM ŠOLSKEM LETU 2025_2026</a></li>
+		 <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
 		
 
    
