--- a/partials/nav.html
+++ b/partials/nav.html
@@ -73,6 +73,8 @@
   </li>
   <li><a href="/Kontakt.html">Dokumenti</a>
     <ul>
+	  <li><a href="/docs/RS.pdf" target= "_blank">Prvi roditeljski sestanek v novem šolskem letu 2025_2026</a></li>
+	  <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
       <li><a href="/docs/POROČILO LDN_2324.pdf" target="_blank">Poročilo LDN - 2023_2024</a></li>
       <li><a href="/docs/LDN_OŠ FARA 2024-25.pdf" target="_blank">LDN za leto 2024_2025</a></li>
       <li><a href="/docs/LDN2425.pdf" target="_blank">LDN vrtca za leto 2024_2025</a></li>
@@ -81,7 +83,8 @@
       <li><a href="/docs/VNN.pdf" target= "_blank">Vzgojni načrt</a></li>
       <li><a href="/docs/POROČILO_SAMOEVALVACIJA.pdf" target= "_blank">Poročilo - samoevalvacija 2023_2024</a></li>
       <li><a href="/docs/POROČILO O SAMOEVALVACIJI 2023_2024.pdf" target= "_blank">Poročilo o samoevalvaciji 2023_2024</a></li>
-		 <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
+	  <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
+	
 		
 
    
