--- a/partials/nav.html
+++ b/partials/nav.html
@@ -36,7 +36,7 @@
       <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2024 - 2025</a></li>
       <li><a href="/docs/ŠP.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2024 - 2025</a></li>
-      <li><a href="/docs/JMAJ.pdf" target="_blank">Jedilnik Maj 2025</a></li>  
+      <li><a href="/docs/JSS25.pdf" target="_blank">Jedilnik SEPTEMBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
      
   
@@ -67,7 +67,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JMAJ.pdf">Jedilnik Maj 2025</a></li>
+      <li><a href="/docs/JSS25.pdf">Jedilnik september 2025</a></li>
 
     </ul>
   </li>
