--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,10 +24,11 @@
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
       <li><a href="/docs/URNIK2425.pdf" target="_blank">Urnik 2024-2025</a></li>
-      <li><a href="/docs/ŠZ2425.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
+      <li><a href="/docs/ŠZ26.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
       
       <li><a href="/docs/PREDMETNIK2425.pdf" target="_blank">Predmetnik 2025 - 2026</a></li>
-      <li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2025 - 2026</a></li>
+	 
+      <li><a href="/docs/PREDMETI26.pdf" target="_blank">Zaposleni na Oš Fara 2025 - 2026</a></li>
       <li><a href="/docs/ŠVN2425.pdf" target="_blank">Šola v naravi 2025 - 2026</a></li>
       <li><a href="/docs/GU2425.pdf" target="_blank">Govorilne ure za učence in starše 2025 - 2026</a></li>
       <li><a href="/docs/ŠOLSKI_KOLEDAR_2425.pdf" target="_blank">Šolski koledar 2025 - 2026</a></li>
