--- a/partials/nav.html
+++ b/partials/nav.html
@@ -36,7 +36,7 @@
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2025 - 2026</a></li>
       <li><a href="/docs/DD2425.pdf" target="_blank">Dnevi dejavnosti 2025 - 2026</a></li>
       <li><a href="/docs/ŠP.pdf" target="_blank">Šolska pot</a></li>
-      <li><a href="/docs/PR2425.pdf" target="_blank">Projekti 2025 - 2026</a></li>
+      <li><a href="/docs/PROJ2526.pdf" target="_blank">Projekti 2025 - 2026</a></li>
       <li><a href="/docs/JSS25.pdf" target="_blank">Jedilnik OKTOBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
      
