--- a/partials/nav.html
+++ b/partials/nav.html
@@ -39,6 +39,7 @@
       <li><a href="/docs/PROJ2526.pdf" target="_blank">Projekti 2025 - 2026</a></li>
       <li><a href="/docs/JSS25.pdf" target="_blank">Jedilnik OKTOBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
+	  <li><a href="/docs/NPZ26.pdf" target="_blank">Nacionalno preverjanje znanja 2026</a></li>
      
   
  
