--- a/partials/nav.html
+++ b/partials/nav.html
@@ -40,6 +40,7 @@
       <li><a href="/docs/JO2526.pdf" target="_blank">Jedilnik OKTOBER 2025</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
 	  <li><a href="/docs/NPZ26.pdf" target="_blank">Nacionalno preverjanje znanja 2026</a></li>
+		<li><a href="/docs/JV2526.pdf" target="_blank">Jutranje varstvo, podaljšano bivanje 2025 - 2026</a></li>
      
   
  
