--- a/partials/nav.html
+++ b/partials/nav.html
@@ -41,6 +41,7 @@
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
 	  <li><a href="/docs/NPZ26.pdf" target="_blank">Nacionalno preverjanje znanja 2026</a></li>
 		<li><a href="/docs/JV2526.pdf" target="_blank">Jutranje varstvo, podaljšano bivanje 2025 - 2026</a></li>
+		<li><a href="/docs/ŠK2526.pdf" target="_blank">Šolska knjižnica 2025 - 2026</a></li>
      
   
  
@@ -70,7 +71,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JSS25.pdf">Jedilnik september 2025</a></li>
+      <li><a href="/docs/JO2526.pdf">Jedilnik oktober 2025</a></li>
 
     </ul>
   </li>
