--- a/partials/nav.html
+++ b/partials/nav.html
@@ -23,8 +23,8 @@
 	
   <li><a href="/zaucenceinstarse.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/URNIK2425.pdf" target="_blank">Urnik 2024-2025</a></li>
-      <li><a href="/docs/ŠZ26.pdf" target="_blank">Šolski zvonec 2024-2025</a></li>
+      <li><a href="/docs/URNIK2526.pdf" target="_blank">Urnik 2025 - 2026</a></li>
+      <li><a href="/docs/ŠZ26.pdf" target="_blank">Šolski zvonec 2024 - 2025</a></li>
       
       <li><a href="/docs/PREDMETNIK2425.pdf" target="_blank">Predmetnik 2025 - 2026</a></li>
 	 
