--- a/partials/nav.html
+++ b/partials/nav.html
@@ -71,7 +71,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/JO2526.pdf">Jedilnik oktober 2025</a></li>
+      <li><a href="/docs/DEC2526.pdf">Jedilnik december 2025</a></li>
 
     </ul>
   </li>
