--- a/partials/nav.html
+++ b/partials/nav.html
@@ -5,10 +5,10 @@
       <li><a href="/Osnovni_podatki.html">Osnovni podatki</a></li>
 
       <li>
-        <a href="/docs/OŠ2025.pdf">Organizacija OŠ Fara &#8594</a>
+        <a href="/docs/ORGF2526.pdf">Organizacija OŠ Fara &#8594</a>
         <ul>
-          <li><a href="/docs/SŠV22_23.pdf">Svet šole</a></li>
-          <li><a href="/docs/SVETSTARŠEV22_23.pdf">Svet staršev</a></li>
+          <li><a href="/docs/SŠV2526.pdf">Svet šole in vrtca</a></li>
+          <li><a href="/docs/SST.pdf">Svet staršev</a></li>
         </ul>
       </li>
       <li>
