--- a/partials/nav.html
+++ b/partials/nav.html
@@ -7,7 +7,7 @@
       <li>
         <a href="/docs/ORGF2526.pdf">Organizacija OŠ Fara &#8594</a>
         <ul>
-          <li><a href="/docs/SŠV2526.pdf">Svet šole in vrtca</a></li>
+          <li><a href="/docs/SŠV2526G.pdf">Svet šole in vrtca</a></li>
           <li><a href="/docs/SST.pdf">Svet staršev</a></li>
         </ul>
       </li>
